# rcarve

./: .gitignore  Cargo.toml  copilot-instructions.md
src/: README.md  bitmap.rs  bucket_vec.rs  cut_stack.rs  debug_ui.rs  desc.rs  dilate_im.rs  im.rs  lib.rs  main.rs  mat3.rs  mpoly.rs  parallelogram.rs  poly_test.rs  region_tree.rs  sim.rs  test_helpers.rs  toolpath.rs  trace.rs
src/im/: core.rs  debug_ui.rs  io.rs  label.rs  mod.rs  roi.rs
src/sim/: debug_ui.rs
test_data/: carve.json  tools.json
