[package]
name = "rcarve"
version = "0.1.0"
edition = "2024"

[dependencies]
image = { version = "0.25", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clipper2 = "0.5.3"

[features]
# Keep current behavior by default (PNG IO + labeling compiled in).
default = ["im-io", "im-label"]

# Optional PNG IO for Im.
im-io = ["dep:image"]

# Optional connected-component labeling utilities.
im-label = []
